objects/Indicator_Value__c.object
<CustomObject>
    <description>This is used to store the Scores at the lowest level ( at the Indicator level )</description>
    <fields>
        <fullName>Model_Indicator_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model Indicator Definition</label>
        <referenceTo>Model_Indicator_Definitions__c</referenceTo>
        <relationshipLabel>Indicator Values</relationshipLabel>
        <relationshipName>Indicator_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Residual_Indicator_Value__c</fullName>
        <label>Residual Indicator Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Score</label>
        <referenceTo>Score__c</referenceTo>
        <relationshipLabel>Indicator Values</relationshipLabel>
        <relationshipName>Indicator_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Indicator Value</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Indicator Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Indicator Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>